[gd_scene load_steps=2 format=2]

[ext_resource path="res://UI/OptionControls/OptionControls.gd" type="Script" id=1]

[node name="OptionControls" type="PanelContainer"]
anchor_right = 1.0
margin_bottom = 14.0
script = ExtResource( 1 )

[node name="HBC" type="HBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 65.0

[node name="CenteredControls" type="VBoxContainer" parent="HBC"]
margin_right = 262.0
margin_bottom = 58.0

[node name="Label" type="Label" parent="HBC/CenteredControls"]
margin_right = 262.0
margin_bottom = 14.0
text = "Popup Centering..."

[node name="Options" type="HBoxContainer" parent="HBC/CenteredControls"]
margin_top = 18.0
margin_right = 262.0
margin_bottom = 58.0

[node name="MouseCenter" type="CheckButton" parent="HBC/CenteredControls/Options"]
margin_right = 131.0
margin_bottom = 40.0
pressed = true
text = "Mouse: "

[node name="ScreenCenter" type="CheckButton" parent="HBC/CenteredControls/Options"]
margin_left = 135.0
margin_right = 262.0
margin_bottom = 40.0
text = "Screen:"

[connection signal="toggled" from="HBC/CenteredControls/Options/MouseCenter" to="." method="_on_MouseCenter_toggled"]
[connection signal="toggled" from="HBC/CenteredControls/Options/ScreenCenter" to="." method="_on_ScreenCenter_toggled"]
